# advent_of_code

./: .gitignore  Cargo.toml  day 21 notes  dump  dump.txt  flake.nix  index.html  main.rs  notes.txt  readme.md  result  run-benchmark.sh  rust-toolchain.toml  test.dot  wrong
.forgejo/workflows/: benchmarks.yaml  demo.yaml
2018/: day10.rs  day12.rs  day4.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2019/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs
2020/: Cargo.toml  day1.rs  day10.rs  day4.rs  day7.rs  day8.rs  lib.rs
2022/: Cargo.toml  day1.rs  day11.rs  day14.rs  day15.rs  day16.rs  day17.rs  day19.rs  day2.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2023/: Cargo.toml  day1.rs  day10.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day5.rs  day6.rs  day8.rs  lib.rs
2024/: Cargo.toml  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2025/: Cargo.toml  day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
aoc_2018/: Cargo.toml  day1.rs  day11.rs  day2.rs  day3.rs  day5.rs  day7.rs  lib.rs
aoc_2019/: Cargo.toml  lib.rs
aoc_2020/: day2.rs  day3.rs  day5.rs  day6.rs  day7.rs  day9.rs  lib.rs
aoc_2022/: Cargo.toml  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day21.rs  day22.rs  day4.rs  day5.rs  lib.rs
aoc_2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  day9.rs  lib.rs
aoc_2024/: Cargo.toml  day1.rs  day17.rs  lib.rs
crates/gen_days/: Cargo.toml
crates/gen_days/src/: lib.rs
gen_days/: lib.rs
gen_days/src/: lib.rs
matrixy/: Cargo.toml  lib.rs
notes/: 0  1  2  3  4  5
src/: chum.rs  main.rs  parser.rs  utils.rs
src/aoc_2018/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc_2018/input/: day9.input
src/aoc_2019/: day1.rs  day11.rs  day2.rs  day3.rs  mod.rs
src/aoc_2020/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc_2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc_2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc_2024/: day1.rs  day5.rs  mod.rs
utils/: Cargo.toml  lib.rs
