[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
draw = []

[dependencies]
aoc_table = { git = "https://github.com/samhamnam/aoc_table" }
zipperoni = { git = "https://github.com/samhamnam/zipperoni" }
gen_days = { path = "gen_days" }
chrono = "0.4.31"
rayon = "1.8.0"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
pathfinding = "4.3.2"
memoize = "0.4.2"
euclid = "0.22.9"
