[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2024"

[dependencies]
gen_days = { workspace = true }
aoc_table = { workspace = true }
utils = { workspace = true }
rayon = { workspace = true }
pathfinding = { workspace = true }
memoize = { workspace = true }
euclid = { workspace = true }
rand = "0.8.5"

[lib]
path = "lib.rs"
