[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
gen_days = { workspace = true }
aoc_table = { workspace = true }
utils = { workspace = true }
memoize = { workspace = true }
zipperoni = { workspace = true }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"


[lib]
path = "lib.rs"


